--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"bits-ui": "^0.19.7",
 		"clsx": "^2.1.0",
+		"embla-carousel-svelte": "^8.0.0",
 		"lucide-svelte": "^0.358.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.2.1"
